# Livecut

./: .gitignore  README.md
VST3/: CMakeLists.txt
VST3/resource/: editor.uidesc
VST3/source/: cids.h  controller.cpp  controller.h  dspkernel.h  editordelegate.cpp  editordelegate.h  entry.cpp  normplain.h  paramdesc.h  parameter.cpp  parameter.h  pids.h  processor.cpp  processor.h  version.h
lib/: BBCutter.cpp  BBCutter.h  DelayLine.cpp  DelayLine.h  SQPAmp.h
